--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Out!</title>
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.css">
 
 </head>
@@ -17,7 +18,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-audio/1.7.2/angular.audio.js"></script>
 <script src="https://use.fontawesome.com/de8dcd2390.js"></script>
 <script src="app/init.js"></script>
-<script src="app/components/drums.js"></script>
+<script src="app/components/drums/drums.js"></script>
+<script src="app/components/nav/nav.js"></script>
+<script src="https://use.fontawesome.com/de8dcd2390.js"></script>
     
 </body>
 </html>
